--- a/composer.json
+++ b/composer.json
@@ -11,13 +11,12 @@
         "ext-pdo_sqlite": "*",
         "cybercog/laravel-optimus": "^3.0",
         "fideloper/proxy": "^4.0",
+        "gerardbalaoro/laravel-artisan-logo": "^1.0",
         "intervention/image": "^2.4",
-        "laravel/framework": "5.6.*",
+        "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "sofa/eloquence-base": "^5.6",
-        "spatie/array-to-xml": "^2.9",
-        "spatie/flysystem-dropbox": "^1.1",
-        "zendframework/zend-text": "^2.7"
+        "spatie/flysystem-dropbox": "^1.1"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
@@ -25,8 +24,7 @@
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^2.0",
-        "phpunit/phpunit": "^7.0",
-        "sven/artisan-view": "3.0"
+        "phpunit/phpunit": "^7.0"
     },
     "autoload": {
         "classmap": [
