--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "sofa/eloquence-base": "^5.6",
+        "sofa/eloquence-mappable": "^5.6",
         "spatie/flysystem-dropbox": "^1.1"
     },
     "require-dev": {
